--- a/sandbox/index.html
+++ b/sandbox/index.html
@@ -6,7 +6,17 @@
 </head>
 <body>
 
+<div class="rplay"
+     data-rplay-setup='{
+     "urls": ["test.mp4", "test2.webm"],
+     "poster": "posterImg.jpg",
+     "preload": false,
+     "controls": false
+     }'>
+</div>
+
 <div id="app"></div>
+
 
 <script src="../dist/player.js"></script>
 </body>
