--- a/sandbox/index.html
+++ b/sandbox/index.html
@@ -8,15 +8,12 @@
 
 <div class="rplay"
      data-rplay-setup='{
-     "urls": ["test.mp4", "test2.webm"],
-     "poster": "posterImg.jpg",
+     "urls": ["test1.mp4", "test1.webm"],
+     "poster": "posterImg1.jpg",
      "preload": false,
      "controls": false
      }'>
 </div>
-
-<div id="app"></div>
-
 
 <script src="../dist/player.js"></script>
 </body>
