--- a/sandbox/index.html
+++ b/sandbox/index.html
@@ -8,7 +8,7 @@
 
 <div class="rplay"
      data-rplay-setup='{
-     "urls": ["test1.mp4", "test1.webm"],
+     "sources": ["test1.mp4", "test1.webm"],
      "poster": "posterImg1.jpg",
      "preload": false,
      "controls": false
